--- a/example/build.gradle
+++ b/example/build.gradle
@@ -18,12 +18,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile project(':app')
+    compile project(':lib')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
