--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,19 +2,18 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 22
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "0.1.0"
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     sourceSets {
@@ -24,19 +23,31 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:recyclerview-v7:21.0.3'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
 }
-buildscript {
-    ext.kotlin_version = '0.10.770'
-    repositories {
-        mavenCentral()
+
+apply plugin: 'com.jfrog.bintray'
+
+bintray {
+    user=BINTRAY_USER
+    key=BINTRAY_API_KEY
+
+    publish = true //If version should be auto published after an upload
+    pkg {
+        repo = 'maven'
+        name = 'object-picker-dialog'
+        desc = 'Dialog for pickering object(s) in Android'
+        websiteUrl = 'https://github.com/taskworld/ObjectPickerDialog'
+        issueTrackerUrl = 'https://github.com/taskworld/ObjectPickerDialog/issues'
+        vcsUrl = 'https://github.com/bintray/gradle-bintray-plugin.git'
+        licenses = ['Apache-2.0']
+        labels = ['android']
+        //Optional version descriptor
+        version {
+            name = '0.1.0' //Bintray logical version name
+            vcsTag = '0.1.0'
+        }
     }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-repositories {
-    mavenCentral()
 }
