--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -51,3 +51,42 @@ bintray {
         }
     }
 }
+
+apply plugin: 'com.github.dcendents.android-maven'
+group 'com.taskworld.os'
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+
+                // Add your description here
+                name 'object-picker-dialog'
+                url 'https://github.com/taskworld/ObjectPickerDialog'
+                version '0.1.0'
+
+                // Set your license
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'taskworld'
+                        name 'Taskworld'
+                        email 'mobiledevs@taskworld.com'
+                    }
+                }
+                scm {
+                    connection 'https://github.com/bintray/gradle-bintray-plugin.git'
+                    developerConnection 'https://github.com/bintray/gradle-bintray-plugin.git'
+                    url 'https://github.com/taskworld/ObjectPickerDialog'
+
+                }
+            }
+        }
+    }
+}
